# ProductApp-Semester-Project-main

ProductApp-Semester-Project-main/Project1/: CMakeLists.txt  CodValidator.cpp  CodValidator.h  CodeException.h  Colectie.cpp  Colectie.h  Entitate.cpp  Entitate.h  EntitateRepo.cpp  EntitateRepo.h  EntitateService.cpp  EntitateService.h  FileRepo.cpp  FileRepo.h  NumeValidator.cpp  NumeValidator.h  PretValidator.cpp  PretValidator.h  UI.cpp  UI.h  lab9-10.cbp  lab9-10.layout  main.cpp  tesEntitate.cpp  tesEntitate.h  testeRepo.cpp  testeRepo.h  testeService.cpp  testeService.h
